Add NekoTracker Settings

--- a/ESP/ini/boards.ini
+++ b/ESP/ini/boards.ini
@@ -300,3 +300,19 @@ build_flags = ${env.build_flags}
              -DSERIAL_MANAGER_USE_HIGHER_FREQUENCY
 			 ${pinoutsESPS3XIAOSENSE.build_flags}
 upload_flags = --no-stub
+
+[env:Neko_Face_Tracker]
+board = esp32-s3-devkitc-1
+board_upload.flashsize = "16MB"
+board_upload.flash_size=16MB
+board_upload.maximum_size = 16777216
+board_build.flash_mode = qio
+board_build.arduino.memory_type = qio_opi
+build_type = debug
+build_flags = ${env.build_flags}
+			 -DCORE_DEBUG_LEVEL=4
+			 -DDEBUG_MODE=1
+			 -DARDUINO_USB_CDC_ON_BOOT=1
+             -DSERIAL_MANAGER_USE_HIGHER_FREQUENCY
+			 ${pinoutSNEKOFACETRACKER.build_flags}
+upload_flags = --no-stub
