--- a/ESP/platformio.ini
+++ b/ESP/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32AIThinker                 ; do not change this value unless you know what you are doing
+default_envs = Neko_Face_Tracker                 ; do not change this value unless you know what you are doing
 description = Open Source ESP Camera firmware
 extra_configs =
 	ini/boards.ini
