--- a/ESP/ini/pinouts.ini
+++ b/ESP/ini/pinouts.ini
@@ -332,3 +332,40 @@ build_flags =
 	-DVSYNC_GPIO_NUM=${pinoutsESPS3XIAOSENSE.VSYNC_GPIO_NUM}
 	-DHREF_GPIO_NUM=${pinoutsESPS3XIAOSENSE.HREF_GPIO_NUM}
 	-DPCLK_GPIO_NUM=${pinoutsESPS3XIAOSENSE.PCLK_GPIO_NUM}
+
+[pinoutSNEKOFACETRACKER]
+pwdn_gpio_num = -1
+reset_gpio_num = -1
+xclk_gpio_num = 4
+siod_gpio_num = 48
+sioc_gpio_num = 47
+y9_gpio_num = 13
+y8_gpio_num = 5
+y7_gpio_num = 6
+y6_gpio_num = 15
+y5_gpio_num = 17
+y4_gpio_num = 8
+y3_gpio_num = 18
+y2_gpio_num = 16
+vsync_gpio_num = 21
+href_gpio_num = 20
+pclk_gpio_num = 7
+build_flags =
+	'-DCAMERA_MODULE_NAME="NekoFaceTracker"'
+	-DCONFIG_CAMERA_MODULE_SWROOM_BABBLE_S3=1
+	-DPWDN_GPIO_NUM=${pinoutSNEKOFACETRACKER.PWDN_GPIO_NUM}
+	-DRESET_GPIO_NUM=${pinoutSNEKOFACETRACKER.RESET_GPIO_NUM}
+	-DXCLK_GPIO_NUM=${pinoutSNEKOFACETRACKER.XCLK_GPIO_NUM}
+	-DSIOD_GPIO_NUM=${pinoutSNEKOFACETRACKER.SIOD_GPIO_NUM}
+	-DSIOC_GPIO_NUM=${pinoutSNEKOFACETRACKER.SIOC_GPIO_NUM}
+	-DY9_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y9_GPIO_NUM}
+	-DY8_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y8_GPIO_NUM}
+	-DY7_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y7_GPIO_NUM}
+	-DY6_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y6_GPIO_NUM}
+	-DY5_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y5_GPIO_NUM}
+	-DY4_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y4_GPIO_NUM}
+	-DY3_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y3_GPIO_NUM}
+	-DY2_GPIO_NUM=${pinoutSNEKOFACETRACKER.Y2_GPIO_NUM}
+	-DVSYNC_GPIO_NUM=${pinoutSNEKOFACETRACKER.VSYNC_GPIO_NUM}
+	-DHREF_GPIO_NUM=${pinoutSNEKOFACETRACKER.HREF_GPIO_NUM}
+	-DPCLK_GPIO_NUM=${pinoutSNEKOFACETRACKER.PCLK_GPIO_NUM}
