Fix network configure

--- a/ESP/ini/boards.ini
+++ b/ESP/ini/boards.ini
@@ -305,14 +305,14 @@ upload_flags = --no-stub
 board = esp32-s3-devkitc-1
 board_upload.flashsize = "16MB"
 board_upload.flash_size=16MB
-board_upload.maximum_size = 16777216
+board_upload.maximum_size = 16777216 
 board_build.flash_mode = qio
 board_build.arduino.memory_type = qio_opi
 build_type = debug
 build_flags = ${env.build_flags}
-			 -DCORE_DEBUG_LEVEL=4
-			 -DDEBUG_MODE=1
-			 -DARDUINO_USB_CDC_ON_BOOT=1
-             -DSERIAL_MANAGER_USE_HIGHER_FREQUENCY
+			 -D CORE_DEBUG_LEVEL=4
+			 -D DEBUG_MODE=1
+			 -D ARDUINO_USB_CDC_ON_BOOT=0
+             -D SERIAL_MANAGER_USE_HIGHER_FREQUENCY=0
 			 ${pinoutSNEKOFACETRACKER.build_flags}
 upload_flags = --no-stub
