--- a/ESP/ini/sim.ini
+++ b/ESP/ini/sim.ini
@@ -11,7 +11,7 @@ extra_scripts =
 build_flags = -DENABLE_ADHOC=${wifi.enableadhoc}
 			  -DADHOC_CHANNEL=${wifi.adhocchannel}
 			  -DWIFI_CHANNEL=${wifi.channel}
-			  -DDEBUG_ESP_PORT=Serial                         ; set the debug port
+			  #-DDEBUG_ESP_PORT=Serial                         ; set the debug port
 			  '-DMDNS_HOSTNAME=${wifi.mdnsname}'              ; Set the OTA password
 			  # required for simulator
 			  '-DWIFI_SSID=${sim.ssid}'
